# dual-edge-dr-graph-xai

./: .gitignore  README.md  RELEASE_CONTENTS.md  RESEARCH_NOTICE.md  pyproject.toml  requirements.txt
configs/: non_augmented.yaml  non_augmented_dr_xai_updated.yaml
paper/: README.md
scripts/: build_macular_x4_mice.py  build_non_augmented_image_evidence.py  build_non_augmented_intersection.py  build_x2_lesion_evidence.py  build_x3_huang_lcl_embeddings.py  build_x3_image_embeddings.py  evaluate_train_val_test.py  plot_dr_class_lesion_xai_summary_clean.py  plot_interpretation_statistics.py  run_full_fusion_graph.py  validate_same_dataset.py
src/rxg/: __init__.py  automorph_paths.py  config.py  dr_xai_evidence.py  graph.py  jacobian.py  lesions.py  metrics.py  models.py  stats.py  validate_ids.py
tests/: test_dr_xai_evidence.py  test_smoke.py  test_stream_contracts.py  test_x3_embedding_contract.py
