[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dual-edge-dr-graph-xai"
version = "0.1.0"
description = "Dual-edge spatial-Jacobian image graph framework for interpretable diabetic retinopathy grading."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anonymous Research Code"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "networkx>=3.0",
  "torch>=2.0",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
